# Sprayer

./: Makefile  README.md  Sprayer.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-poetry-build.yml
sprayer/: __init__.py  __main__.py
