[tool.poetry]
name = "sprayer"
version = "0.9"
description = "Multithreaded spraying of a password on all accounts of a domain."
authors = ["p0dalirius"]

[tool.poetry.dependencies]
python = "^3.7"
impacket = "^0.10.0"
xlsxWriter = ">=3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sprayer="sprayer.__main__:main"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
